add completed projects

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
 <head>
   <title>{{ site.title }}
-  {% if jekyll.environment != "production" %}
+    {% if jekyll.environment != "production" %}
     - Development {{ site.netlify.context }} - {{ site.netlify.branch }} @ {{ site.netlify.commit }}
-  {% endif %}
+    {% endif %}
   </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,8 +19,8 @@
   <script src="resources/vendors/angular-sanitize/angular-sanitize.js"></script>
   <script src="resources/vendors/showdown/showdown.js"></script>
   <script src="resources/vendors/markdown/markdown.js"></script>
-  <script src="resources/js/app.js"></script>
   <script>var baseUrl = '{{ site.baseurl }}';</script>
+  <script src="resources/js/app.js"></script>
   <!-- Import coala module directive-->
   <script src="resources/js/directives/projects.js"></script>
   <script src="resources/js/directives/mentors.js"></script>
@@ -41,7 +41,7 @@
   <main ng-app="coala">
     <nav ng-controller="NavController as nc">
       <div class="nav-wrapper">
-        <a href="/" class="brand-logo"><img  class="nav-logo" src="screenshots/logo.png" alt="logo"></a>
+        <a href="/" class="brand-logo"><img class="nav-logo" src="screenshots/logo.png" alt="logo"></a>
         <a data-activates="mobile-nav" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li ng-class="{active:nc.isSet('/projects')}">
@@ -59,72 +59,84 @@
               FAQs
             </a>
           </li>
-          <li><a href="{{ site.githuburl }}" target="_blank" title="Fork us on GitHub"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
+          <li ng-class="{active:nc.isSet('/completed')}">
+            <a ng-click="nc.setView('/completed')" onmousedown="keyPressed(event, '#/completed')" onerror="">
+              Completed Projects
+            </a>
+          </li>
+          <li><a href="{{ site.githuburl }}" target="_blank" title="Fork us on GitHub"><i class="fa fa-github fa-2x"
+                aria-hidden="true"></i></a></li>
         </ul>
       </div>
     </nav>
     <ul class="side-nav" id="mobile-nav" ng-controller="NavController as nc">
-      <li ng-class="{active:nc.isSet('/projects')}"><a class="uppercase" ng-click="nc.setView('/projects')" onmousedown="keyPressed(event, '#/projects')">Projects</a></li>
-      <li ng-class="{active:nc.isSet('/mentors')}"><a class="uppercase" ng-click="nc.setView('/mentors')" onmousedown="keyPressed(event, '#/mentors')">Mentors</a></li>
-      <li ng-class="{active:nc.isSet('/faq')}"><a ng-click="nc.setView('/faq')" onmousedown="keyPressed(event, '#/faq')" onerror="">FAQs</a></li>
-      <li><a href="{{ site.githuburl }}" target="_blank" title="Fork us on GitHub"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
+      <li ng-class="{active:nc.isSet('/projects')}"><a class="uppercase" ng-click="nc.setView('/projects')"
+          onmousedown="keyPressed(event, '#/projects')">Projects</a></li>
+      <li ng-class="{active:nc.isSet('/mentors')}"><a class="uppercase" ng-click="nc.setView('/mentors')"
+          onmousedown="keyPressed(event, '#/mentors')">Mentors</a></li>
+      <li ng-class="{active:nc.isSet('/faq')}"><a ng-click="nc.setView('/faq')" onmousedown="keyPressed(event, '#/faq')"
+          onerror="">FAQs</a></li>
+      <li><a href="{{ site.githuburl }}" target="_blank" title="Fork us on GitHub"><i class="fa fa-github fa-2x"
+            aria-hidden="true"></i></a></li>
     </ul>
     <div ng-view=""></div>
   </main>
   <footer class="page-footer">
-    <div class="row center for-mobile"> <a class="github-button" href="{{ site.githuburl }}" data-size="large">Fork</a> </div>
+    <div class="row center for-mobile"> <a class="github-button" href="{{ site.githuburl }}" data-size="large">Fork</a>
+    </div>
     <div class="container">
-        <div class="row">
-            <div class="col m3 s12">
-                <h5 class="white-text fine">Site Links</h5>
-                <ul>
-                    <li><a class="grey-text text-lighten-3" href="{{ site.org.site_links.info }}">What is freifunk.net?</a></li>
-                    <li><a class="grey-text text-lighten-3" href="{{ site.org.site_links.memorandum }}">Memorandum of Understanding</a></li>
-                    <li><a class="grey-text text-lighten-3" href="{{ site.org.site_links.blog }}">Blog</a></li>
-                </ul>
-            </div>
-            <div class="col m9 s12 center">
-              <div class="center">
-                <h3 class="fine white-text">
-                  <span>
-                    <img class="footer-logo" height="36px" src="resources/images/coala.png" alt="coala">
-                  </span>
-                  <span>{{ site.organization }}</span>
-                </h3>
-              </div>
-              <div class="center footer-icons">
-                <span class="icon">
-                  <a href="{{ site.mastodon.url }}" rel="me" target="_blank" class="btn center">
-                    <i class="fa-brands fa-mastodon" style="color: #dc0067;">
-                    </i>&nbsp;Follow us on Mastodon
-                  </a>
-                </span>
-                <span class="icon">
-                  <a href="{{ site.chat.gsoc.room }}" target="_blank" class="btn center">
-                    <i class="fa-solid fa-comments" style="color: #dc0067;">
-                    </i>&nbsp;Join our Chat
-                  </a>
-                </span>
-                <span class="icon">
-                  <a href="{{ site.githuburl }}" target="_blank" class="btn center">
-                      <i class="fa-brands fa-github" style="color: #dc0067;"></i>
-                      &nbsp;Star us on GitHub
-                  </a>
-                </span>
-              </div>
-            </div>
+      <div class="row">
+        <div class="col m3 s12">
+          <h5 class="white-text fine">Site Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="{{ site.org.site_links.info }}">What is freifunk.net?</a></li>
+            <li><a class="grey-text text-lighten-3" href="{{ site.org.site_links.memorandum }}">Memorandum of
+                Understanding</a></li>
+            <li><a class="grey-text text-lighten-3" href="{{ site.org.site_links.blog }}">Blog</a></li>
+          </ul>
+        </div>
+        <div class="col m9 s12 center">
+          <div class="center">
+            <h3 class="fine white-text">
+              <span>
+                <img class="footer-logo" height="36px" src="resources/images/coala.png" alt="coala">
+              </span>
+              <span>{{ site.organization }}</span>
+            </h3>
+          </div>
+          <div class="center footer-icons">
+            <span class="icon">
+              <a href="{{ site.mastodon.url }}" rel="me" target="_blank" class="btn center">
+                <i class="fa-brands fa-mastodon" style="color: #dc0067;">
+                </i>&nbsp;Follow us on Mastodon
+              </a>
+            </span>
+            <span class="icon">
+              <a href="{{ site.chat.gsoc.room }}" target="_blank" class="btn center">
+                <i class="fa-solid fa-comments" style="color: #dc0067;">
+                </i>&nbsp;Join our Chat
+              </a>
+            </span>
+            <span class="icon">
+              <a href="{{ site.githuburl }}" target="_blank" class="btn center">
+                <i class="fa-brands fa-github" style="color: #dc0067;"></i>
+                &nbsp;Star us on GitHub
+              </a>
+            </span>
           </div>
         </div>
+      </div>
+    </div>
     </div>
     <div class="footer-copyright">
-        <div class="container">
-            <span class="left">
-                ©
-                <span id="current-year"></span>
-                freifunk.net
-            </span>
-            <span class="grey-text text-lighten-4 right">{{ site.licence.short_form }}</span>
-        </div>
+      <div class="container">
+        <span class="left">
+          ©
+          <span id="current-year"></span>
+          freifunk.net
+        </span>
+        <span class="grey-text text-lighten-4 right">{{ site.licence.short_form }}</span>
+      </div>
     </div>
   </footer>
 </body>
@@ -133,17 +145,17 @@
 
 
 <script>
-$(document).ready(function () {
+  $(document).ready(function () {
     $('select').material_select();
     $(".button-collapse").sideNav();
     $('#current-year').html(new Date().getFullYear());
     $('.github-card').html('<img src="resources/images/100x100.png" />')
-})
+  })
 </script>
 <script>
   function keyPressed(event, loc) {
-      if (event.ctrlKey) {
-          window.open(loc, '_blank');
-      }
+    if (event.ctrlKey) {
+      window.open(loc, '_blank');
+    }
   }
 </script>
