remove travis and fix projects and index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </li>
           <li ng-class="{active:nc.isSet('/completed')}">
             <a ng-click="nc.setView('/completed')" onmousedown="keyPressed(event, '#/completed')" onerror="">
-              Completed Projects
+              COMPLETED PROJECTS
             </a>
           </li>
           <li><a href="{{ site.githuburl }}" target="_blank" title="Fork us on GitHub"><i class="fa fa-github fa-2x"
