fix console errors and side nav

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
           onmousedown="keyPressed(event, '#/mentors')">Mentors</a></li>
       <li ng-class="{active:nc.isSet('/faq')}"><a ng-click="nc.setView('/faq')" onmousedown="keyPressed(event, '#/faq')"
           onerror="">FAQs</a></li>
+      <li ng-class="{active:nc.isSet('/completed')}"><a ng-click="nc.setView('/completed')"
+          onmousedown="keyPressed(event, '#/completed')" onerror="">COMPLETED PROJECTS</a></li>
       <li><a href="{{ site.githuburl }}" target="_blank" title="Fork us on GitHub"><i class="fa fa-github fa-2x"
             aria-hidden="true"></i></a></li>
     </ul>
